--- a/pages/offre/offre.module.scss
+++ b/pages/offre/offre.module.scss
@@ -2,7 +2,7 @@
   OFFRE
 *********************************************************************************************************************/
 #offre {
-  background-color: rgb(var(--greygrey));
+  background-color: rgb(var(--greyLight));
 
   // Visual
   // ----------------------------------------------------------------
@@ -12,58 +12,84 @@
 
   // SECTIONS
   SECTION {
-    @media screen and (max-width: 768px) {
-      padding-block: 90px;
+    padding-block: 120px;
+
+    &:first-child {
+      padding-top: 150px;
     }
 
-    @media screen and (min-width: 769px) {
-      padding-block: 180px;
+    &:last-child {
+      padding-bottom: 150px;
     }
 
     &.quinconce {
-      display: flex;
-      padding-bottom: 0;
-
-      @media screen and (max-width: 768px) {
-        flex-wrap: wrap;
-        gap: 1.5rem;
-      }
-
-      @media screen and (min-width: 769px) {
-        gap: 3rem;
-      }
-
       &:nth-child(odd) {
-        @media screen and (min-width: 769px) {
-          flex-direction: row-reverse;
+        background-color: rgb(var(--greyPale));
+
+        & > DIV {
+          @media screen and (min-width: 769px) {
+            flex-direction: row-reverse;
+          }
         }
       }
 
-      .im {
-        border-radius: 7px;
-        background: url(../../assets/images/monaco-intro.webp) fixed no-repeat right bottom / cover;
+      & > DIV {
+        display: flex;
 
         @media screen and (max-width: 768px) {
-          width: 100%;
-          height: 200px;
+          flex-wrap: wrap;
+          gap: 1.5rem;
         }
 
         @media screen and (min-width: 769px) {
-          width: 50%;
-        }
-      }
-
-      .txt {
-        @media screen and (max-width: 768px) {
+          gap: 3rem;
         }
 
-        @media screen and (min-width: 769px) {
-          width: 50%;
+        .im {
+          border-radius: 7px;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-size: contain;
+
+          @media screen and (max-width: 768px) {
+            width: 100%;
+            height: 200px;
+          }
+
+          @media screen and (min-width: 769px) {
+            width: 50%;
+          }
         }
 
-        P {
-          margin-top: 1rem;
-          text-align: justify;
+        .txt {
+          @media screen and (max-width: 768px) {
+          }
+
+          @media screen and (min-width: 769px) {
+            width: 50%;
+          }
+
+          P {
+            margin-top: 1rem;
+            text-align: justify;
+          }
+
+          .spec {
+            display: inline-block;
+            margin-top: 2rem;
+            margin-right: 5rem;
+            vertical-align: top;
+
+            &:last-child {
+              margin-right: 0;
+            }
+
+            UL {
+              margin-top: 1rem;
+              margin-left: 2rem;
+              list-style: circle;
+            }
+          }
         }
       }
     }
