--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -5,7 +5,7 @@
   // Visual
   // ----------------------------------------------------------------
   .visual {
-    background-image: url(../assets/images/monaco-intro.webp);
+    background-image: url(../assets/images/intro-hp.webp);
   }
 
   // Group
