--- a/pages/groupe/groupe.module.scss
+++ b/pages/groupe/groupe.module.scss
@@ -9,11 +9,53 @@
   &.mes {
     .visual {
       background-image: url(../../assets/images/intro-mes.webp);
+
+      &::before {
+        position: absolute;
+        z-index: 2;
+        background: url(../../assets/images/logo-MES.webp) no-repeat 0 0 / contain;
+        content: "";
+
+        @media screen and (max-width: 768px) {
+          right: 1rem;
+          bottom: -52px;
+          width: 130px;
+          height: 100px;
+        }
+
+        @media screen and (min-width: 769px) {
+          left: 46%;
+          bottom: -64px;
+          width: 100vw;
+          height: 130px;
+        }
+      }
     }
   }
   &.i2s {
     .visual {
       background-image: url(../../assets/images/i2s-intro.webp);
+
+      &::before {
+        position: absolute;
+        z-index: 2;
+        background: url(../../assets/images/logo-I2S.webp) no-repeat 0 0 / contain;
+        content: "";
+
+        @media screen and (max-width: 768px) {
+          right: 1rem;
+          bottom: -52px;
+          width: 130px;
+          height: 100px;
+        }
+
+        @media screen and (min-width: 769px) {
+          left: 46%;
+          bottom: -64px;
+          width: 100vw;
+          height: 130px;
+        }
+      }
 
       H1 {
         @media screen and (max-width: 768px) {
@@ -25,6 +67,27 @@
   &.c2s {
     .visual {
       background-image: url(../../assets/images/c2s-intro.webp);
+
+      &::before {
+        position: absolute;
+        z-index: 2;
+        background: url(../../assets/images/logo-C2S.webp) no-repeat 0 0 / contain;
+        content: "";
+
+        @media screen and (max-width: 768px) {
+          right: 1rem;
+          bottom: -52px;
+          width: 130px;
+          height: 100px;
+        }
+
+        @media screen and (min-width: 769px) {
+          left: 46%;
+          bottom: -64px;
+          width: 100vw;
+          height: 130px;
+        }
+      }
     }
   }
 
