--- a/pages/groupe/groupe.module.scss
+++ b/pages/groupe/groupe.module.scss
@@ -6,29 +6,33 @@
 
   // Visual
   // ----------------------------------------------------------------
+  .visual {
+    &::before {
+      position: absolute;
+      z-index: 2;
+      content: "";
+
+      @media screen and (max-width: 768px) {
+        right: 1rem;
+        bottom: -52px;
+        width: 130px;
+        height: 100px;
+      }
+
+      @media screen and (min-width: 769px) {
+        left: 46%;
+        bottom: -64px;
+        width: 100vw;
+        height: 130px;
+      }
+    }
+  }
   &.mes {
     .visual {
       background-image: url(../../assets/images/intro-mes.webp);
 
       &::before {
-        position: absolute;
-        z-index: 2;
         background: url(../../assets/images/logo-MES.webp) no-repeat 0 0 / contain;
-        content: "";
-
-        @media screen and (max-width: 768px) {
-          right: 1rem;
-          bottom: -52px;
-          width: 130px;
-          height: 100px;
-        }
-
-        @media screen and (min-width: 769px) {
-          left: 46%;
-          bottom: -64px;
-          width: 100vw;
-          height: 130px;
-        }
       }
     }
   }
@@ -37,24 +41,7 @@
       background-image: url(../../assets/images/i2s-intro.webp);
 
       &::before {
-        position: absolute;
-        z-index: 2;
         background: url(../../assets/images/logo-I2S.webp) no-repeat 0 0 / contain;
-        content: "";
-
-        @media screen and (max-width: 768px) {
-          right: 1rem;
-          bottom: -52px;
-          width: 130px;
-          height: 100px;
-        }
-
-        @media screen and (min-width: 769px) {
-          left: 46%;
-          bottom: -64px;
-          width: 100vw;
-          height: 130px;
-        }
       }
 
       H1 {
@@ -69,24 +56,7 @@
       background-image: url(../../assets/images/c2s-intro.webp);
 
       &::before {
-        position: absolute;
-        z-index: 2;
         background: url(../../assets/images/logo-C2S.webp) no-repeat 0 0 / contain;
-        content: "";
-
-        @media screen and (max-width: 768px) {
-          right: 1rem;
-          bottom: -52px;
-          width: 130px;
-          height: 100px;
-        }
-
-        @media screen and (min-width: 769px) {
-          left: 46%;
-          bottom: -64px;
-          width: 100vw;
-          height: 130px;
-        }
       }
     }
   }
@@ -124,6 +94,26 @@
       .im {
         border-radius: 7px;
         background: url(../../assets/images/monaco-intro.webp) fixed no-repeat right bottom / cover;
+
+        @media screen and (max-width: 768px) {
+          width: 100%;
+          height: 200px;
+        }
+
+        @media screen and (min-width: 769px) {
+          width: 50%;
+        }
+      }
+
+      .imFx {
+        border-radius: 7px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+
+        IMG {
+          border-radius: 7px;
+        }
 
         @media screen and (max-width: 768px) {
           width: 100%;
@@ -319,6 +309,7 @@
 
     &#values {
       align-items: center;
+      flex-direction: row-reverse;
       gap: 5rem;
 
       H3 {
@@ -327,6 +318,12 @@
 
       P {
         margin-top: 0.35rem;
+      }
+
+      .im {
+        width: 100%;
+        height: 400px;
+        background-attachment: initial;
       }
     }
 
@@ -379,6 +376,41 @@
 
           BUTTON {
             margin-top: 2rem;
+          }
+        }
+      }
+    }
+
+    &#metiers {
+      background-color: rgb(var(--greyPale));
+
+      .content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: flex-start;
+        gap: 7rem 3rem;
+
+        DIV {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          width: 30%;
+          text-align: center;
+
+          .im {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 200px;
+          }
+
+          H2 {
+            margin-top: 3rem;
+          }
+
+          P {
+            margin-top: 0.7rem;
           }
         }
       }
