--- a/pages/carrieres/carrieres.module.scss
+++ b/pages/carrieres/carrieres.module.scss
@@ -48,6 +48,11 @@
           margin-left: 30px;
           margin-top: 0.7rem;
         }
+
+        .bts {
+          display: flex;
+          margin-top: 3rem;
+        }
       }
     }
   }
