--- a/components/footer.module.scss
+++ b/components/footer.module.scss
@@ -94,7 +94,8 @@
         display: flex;
         align-items: center;
 
-        SVG {
+        I {
+          display: flex;
           margin-right: 0.7rem;
           width: 1rem;
         }
