--- a/pages/groupe/groupe.module.scss
+++ b/pages/groupe/groupe.module.scss
@@ -160,20 +160,20 @@
       #counters {
         display: flex;
         justify-content: space-between;
-        align-items: flex-start;
+        gap: 3rem;
         margin-top: 4rem;
         color: rgb(var(--red));
 
         @media screen and (max-width: 768px) {
           flex-direction: column;
+          align-items: center;
           gap: 4rem;
           margin: 0 auto;
           padding-block: 3rem;
         }
 
         @media screen and (min-width: 769px) {
-          // margin-left: 0px;
-          // padding-inline: 10% 20%;
+          align-items: flex-start;
           height: 212px;
         }
 
@@ -193,7 +193,7 @@
           }
 
           SPAN {
-            // margin-top: 0.5rem;
+            text-align: center;
             font-weight: normal;
             color: rgb(var(--blueDark), 0.5);
             letter-spacing: 0.1rem;
