--- a/pages/realisations/reals.module.scss
+++ b/pages/realisations/reals.module.scss
@@ -5,7 +5,7 @@
   background-color: rgb(var(--greygrey));
 
   .visual {
-    background-image: url(../../assets/images/centre-cardio-thoracique-monaco.jpg);
+    background-image: url(../../assets/images/real-centre-cardio-thoracique-monaco-1.webp);
   }
 
   #filters {
@@ -63,12 +63,14 @@
           left: 50%;
           top: 50%;
           display: flex;
+          flex-direction: column;
           justify-content: center;
           align-items: center;
           gap: 1rem;
           opacity: 0;
           width: 0;
           height: 0;
+          padding-inline: 2rem;
           background-color: rgba(var(--blueDark), 0.7);
           color: white;
           transition: all 0.3s;
@@ -86,21 +88,21 @@
           }
 
           STRONG {
-            position: absolute;
-            display: block;
-            margin-top: -6rem;
-            padding-inline: 2rem;
             font-size: 1.2rem;
             text-transform: uppercase;
           }
 
-          SVG {
+          SPAN {
+            margin-top: -0.5rem;
+            font-size: 0.9rem;
+          }
+
+          I {
             width: 20px;
-            vertical-align: middle;
             cursor: pointer;
 
             &:hover {
-              color: var(--blueLight);
+              color: rgb(var(--red));
             }
           }
         }
@@ -117,8 +119,8 @@
         &:nth-child(5),
         &:nth-child(7),
         &:nth-child(18),
-        &:nth-child(23),
-        &:nth-child(25) {
+        &:nth-child(22),
+        &:nth-child(24) {
           grid-row: span 2;
         }
       }
