--- a/pages/_app.scss
+++ b/pages/_app.scss
@@ -479,21 +479,25 @@ BODY:not(#HomePage) HEADER {
     display: flex;
   }
 
-  DIV:first-child {
+  #maskZoom {
     display: flex;
-    cursor: pointer;
 
     IMG {
       max-height: 1100px;
     }
   }
 
-  DIV:last-child {
+  #maskClose {
     position: absolute;
     right: 3rem;
     top: 1rem;
-    font-size: 3rem;
+    font-size: 2.3rem;
+    font-weight: bold;
     color: white;
     cursor: pointer;
+
+    &:hover {
+      color: rgb(var(--red));
+    }
   }
 }
