--- a/pages/_app.scss
+++ b/pages/_app.scss
@@ -501,3 +501,12 @@ BODY:not(#HomePage) HEADER {
     }
   }
 }
+
+// .respButton {
+//   container-type: inline-size;
+// }
+// @container (width < 18rem) {
+//   .respButton {
+//     display: none;
+//   }
+// }
