--- a/pages/groupe/groupe.module.scss
+++ b/pages/groupe/groupe.module.scss
@@ -212,6 +212,19 @@
           }
         }
       }
+
+      #diags {
+        display: flex;
+        justify-content: space-between;
+        gap: 2rem;
+        margin-top: 4rem;
+        text-align: center;
+
+        SPAN {
+          display: block;
+          margin-top: 2rem;
+        }
+      }
     }
 
     .timeline {
@@ -393,24 +406,20 @@
       }
 
       .content {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: flex-start;
-        gap: 7rem 3rem;
+        display: grid;
+        grid-template-columns: repeat(3, auto);
+        gap: 5rem 3rem;
 
         DIV {
           display: flex;
           flex-direction: column;
           align-items: center;
-          width: 30%;
           text-align: center;
 
           .im {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 200px;
+            display: grid;
+            margin-bottom: 2rem;
+            height: 100px;
           }
 
           H2 {
