--- a/pages/groupe/groupe.module.scss
+++ b/pages/groupe/groupe.module.scss
@@ -22,7 +22,7 @@
       @media screen and (min-width: 769px) {
         left: 46%;
         bottom: -64px;
-        width: 100vw;
+        width: 30vw;
         height: 130px;
       }
     }
@@ -143,15 +143,14 @@
     &#keys {
       padding-block: 90px 30px;
       background-color: rgb(var(--greyLight));
+      background-image: url(../../assets/images/bgCounters.webp), url(../../assets/images/bgCounters.webp);
 
       @media screen and (max-width: 768px) {
-        background-image: url(../../assets/images/bgCounters.webp), url(../../assets/images/bgCounters.webp);
         background-position: 150px top, calc(100% + 250px) 50px;
         background-repeat: repeat-y, repeat-Y;
       }
 
       @media screen and (min-width: 769px) {
-        background-image: url(../../assets/images/bgCounters.webp), url(../../assets/images/bgCounters.webp);
         background-position: left center, center center;
         background-repeat: no-repeat, no-repeat;
         background-size: cover;
@@ -195,7 +194,7 @@
           SPAN {
             text-align: center;
             font-weight: normal;
-            color: rgb(var(--blueDark), 0.5);
+            color: rgb(var(--blueDark), 0.8);
             letter-spacing: 0.1rem;
 
             @media screen and (max-width: 768px) {
@@ -222,47 +221,53 @@
 
         SPAN {
           display: block;
-          margin-top: 2rem;
+          margin-top: 1.5rem;
+          font-size: 1.2rem;
         }
       }
     }
 
     .timeline {
       display: grid;
-      justify-content: space-between;
-      align-items: center;
+      gap: 5rem 2rem;
+      margin-top: 4rem;
+      // justify-content: space-between;
+      // align-items: center;
+      text-align: center;
 
       @media screen and (max-width: 768px) {
         grid-template-columns: repeat(2, auto);
-        gap: 2rem;
       }
 
       @media screen and (min-width: 769px) {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(5, 1fr);
       }
 
       &::after {
         position: absolute;
-        top: 0;
-        width: 2px;
-        height: 100%;
         background-color: rgb(var(--red));
         content: "";
 
         @media screen and (max-width: 768px) {
           left: 20%;
+          top: 0;
+          width: 2px;
+          height: 100%;
         }
 
         @media screen and (min-width: 769px) {
-          left: 40%;
+          left: 0;
+          top: 69px;
+          width: 100%;
+          height: 2px;
         }
       }
 
-      DIV:nth-child(odd) {
-        font-size: 1.5rem;
+      DIV:nth-child(-n + 5) {
+        font-size: 1.8rem;
         font-weight: bold;
         color: rgb(var(--red));
-        text-align: center;
+        // text-align: center;
 
         &::after {
           position: absolute;
@@ -278,15 +283,15 @@
           }
 
           @media screen and (min-width: 769px) {
-            left: 78%;
-            top: 25%;
+            left: 45%;
+            top: 60px;
             width: 20px;
             height: 20px;
           }
         }
       }
 
-      DIV:nth-child(even) {
+      DIV:nth-child(n + 6) {
         font-size: 1.1rem;
         font-weight: bold;
       }
