--- a/pages/realisations/reals.module.scss
+++ b/pages/realisations/reals.module.scss
@@ -31,7 +31,7 @@
   }
 
   #gallery {
-    margin-block: 90px;
+    padding-block: 90px;
     text-align: center;
 
     H2 + SPAN {
@@ -125,5 +125,9 @@
         }
       }
     }
+  }
+
+  & + FOOTER {
+    margin-top: 0;
   }
 }
