--- a/pages/groupe/groupe.module.scss
+++ b/pages/groupe/groupe.module.scss
@@ -215,13 +215,25 @@
       #diags {
         display: flex;
         justify-content: space-between;
-        gap: 2rem;
-        margin-top: 4rem;
         text-align: center;
+
+        @media screen and (max-width: 768px) {
+          flex-direction: column;
+          align-items: center;
+          gap: 2rem;
+          margin: 0 auto;
+          padding-block: 3rem;
+        }
+
+        @media screen and (min-width: 769px) {
+          align-items: flex-start;
+          gap: 8rem;
+        }
 
         SPAN {
           display: block;
-          margin-top: 1.5rem;
+          margin-top: -3rem;
+          padding-bottom: 4rem;
           font-size: 1.2rem;
         }
       }
